public/app/grid.css
.the-map {
  transform-origin: top left;
  display: inline-block;
  cursor: crosshair;
  overflow: hidden;
  position: relative;
  z-index: 0;
}

.the-map * {
  box-sizing: border-box;
}

.mobile-cursor {
  position: fixed;
  left: calc(50% - 12.5px);
  top: calc(50% - 12.5px);
  width: 25px;
  height: 25px;
  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAYUlEQVRIS+1WQQ4AIAiS/z/aRs2tW9KhdcCzijJkIoTIzKx0AOiWthPZkCDsTSyDHCk2XVbXh3eyW8VRwxHcYF68EijtK0VK7rSgJ5uIU9kg+4TZIG2QHxpkX8DrJbr5uwYYoKkOM2ZJzgAAAABJRU5ErkJggg==");
}

.tile {
  position: absolute;
  overflow: hidden;
}

.tile-map {
  position: absolute;
  width: 100%;
  height: 100%;
}

.tile-image {
  position: absolute;
  width: 161px;
  height: 161px;
  bottom: 0;
  right: 0;
  visibility: hidden;
  image-rendering: -webkit-optimize-contrast;
  image-rendering: crisp-edges;
}

.layer {
  position: absolute;
  width: 100%;
  height: 100%;
  border-left: 1px solid;
  border-top: 1px solid;
  border-color: rgba(0, 0, 0, 0);
  background-clip: padding-box;
  pointer-events: none;
}

.widget-layer {
  z-index: 10;
}

.grid-layer {
  display: inline-block;
  z-index: 10;
  pointer-events: auto;
}

.mask-layer {
  z-index: 9;
}

.gmoverlay-layer {
  z-index: 8;
  display: none;
}

.editor-view .gmoverlay-layer {
  display: inherit;
}

.text-layer {
  z-index: 7;
}

.separators-layer {
  z-index: 6;
}

.images-layer {
  z-index: 5;
}

.shapes-layer {
  z-index: 4;
}

.stairs-layer {
  z-index: 3;
}

.walls-layer {
  z-index: 2;
  filter: drop-shadow(2px 2px 3px #919191);
  /* Clip to tile, including the drop-shadow effect. */
  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
}

.floors-layer {
  z-index: 1;
}

.grid-cell {
  position: absolute;
  display: inline-block;
  border-right: 1px solid rgba(0, 0, 0, 0);
  border-bottom: 1px solid rgba(0, 0, 0, 0);
}

.wall-cell {
  position: absolute;
}

.floor-cell {
  position: absolute;
  border-right: 1px solid;
  border-bottom: 1px solid;
  background-color: rgb(245, 245, 220);
  border-color: bisque;
}

.separator-cell {
  position: absolute;
}

.image-cell {
  position: absolute;
}

.shape-cell {
  position: absolute;
}

.stairs-cell {
  position: absolute;
  margin: 0 1px 1px 0;
}

.text-cell {
  position: absolute;
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
  text-align: center;
  margin: 2px 3px 3px 2px;
  white-space: pre-wrap;
}

.text-cell-adding, .text-cell-removing, .text-cell-editing,
.image-cell-adding, .image-cell-removing, .image-cell-editing {
  border: 1px dashed rgb(50, 50, 50);
  margin: 1px 2px 2px 1px;
}

.image-cell-removing {
  border-color: red;
}

.text-cell-textarea, .image-cell-textarea {
  position: absolute;
  z-index: 11;
  resize: none;
  margin: 1px 0px 0px 1px;
  overflow: hidden;
  text-align: center;
  border: 0;
  outline: 0;
  padding-left: 0;
  padding-right: 0;
  box-shadow: 0px 0px 8px 2px rgba(50,50,50,0.5);
}

.image-cell-textarea {
  background-color: rgba(255, 255, 255, 0.5);
}

.text-hover-widget, .image-hover-widget {
  position: absolute;
  cursor: text;
  z-index: 10;
  margin: 2px 3px 3px 2px;
}

.fixed-image-hover-widget {
  position: absolute;
  margin: 0 1px 1px 0;
  z-index: 10;
}

.text-delete-widget, .image-delete-widget {
  position: absolute;
  width: 6px;
  height: 6px;
  cursor: pointer;
  margin-left: -2px;
  z-index: 12;
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='6' height='6'><line x1='0' y1='0' x2='6' y2='6' stroke='red' stroke-width='1' /><line x1='6' y1='0' x2='0' y2='6' stroke='red' stroke-width='1' /></svg>");
}

.image-delete-widget {
  margin-left: -5px;
}

.text-resize-widget, .image-resize-widget {
  position: absolute;
  width: 6px;
  height: 6px;
  cursor: se-resize;
  margin-left: -2px;
  margin-top: -2px;
  z-index: 12;
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='6' height='6'><polygon points='0,6 6,6 6,0'/></svg>");
}

.image-resize-widget {
  margin-left: -5px;
  margin-top: -5px;
}

.box-move-widget {
  position: absolute;
  background-color: yellow;
  width: 6px;
  height: 6px;
  cursor: move;
  z-index: 12;
  background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='6' height='6'><rect x='0' y='0' width='6' height='6' stroke-width='1' fill='none' stroke='black'/></svg>");
}

.image-cell-editing .image, .image-cell-adding .image {
  margin: -2px -3px -3px -2px;
}

.primary-cell {
  width: 25px;
  height: 25px;
}

.corner-cell {
  width: 7px;
  height: 7px;
}

.vertical-cell {
  width: 7px;
  height: 25px;
}

.horizontal-cell {
  width: 25px;
  height: 7px;
}

.selected-cell {
  background-color: rgba(223, 219, 229, 0.25);
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cg fill='%239C92AC' fill-opacity='0.15'%3E%3Cpath fill-rule='evenodd' d='M0 0h4v4H0V0zm4 4h4v4H4V4z'/%3E%3C/g%3E%3C/svg%3E");
}

.stairs-cell-adding, .stairs-cell-removing, .stairs-cell-editing {
  margin: -1px 0 0 -1px;
}

.stairs-cell-adding, .stairs-cell-removing {
  filter: opacity(0.6);
}

.stairs-cell-adding, .stairs-cell-editing {
  border: 1px dashed rgb(50, 50, 50);
}

.stairs-cell-removing {
  border: 1px dashed red;
}

.image-cell-removing {
  border-color: red;
}

.square-cell-primary, .square-cell-vertical, .square-cell-horizontal,
.circle-cell-primary, .circle-cell-vertical, .circle-cell-horizontal {
  margin: -1px -0px -0px -1px;
}

.square-cell-primary, .circle-cell-primary {
  z-index: 1;
}

.square-cell-vertical, .square-cell-horizontal, .circle-cell-vertical,
.circle-cell-horizontal {
  z-index: 0;
}

.square-cell-corner, .circle-cell-corner {
  margin: -8px -7px -7px -8px;
  z-index: 2;
  background: rgb(255, 0, 0) !important;
}

.square-cell-corner-removing, .circle-cell-corner-removing {
  z-index: -1;
}
/* ... */

